--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,27 +1,24 @@
-{% set name = "pdfminer" %}
 {% set version = "20140328" %}
 
 
 package:
-  name: {{ name }}
+  name: pdfminer
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/p/pdfminer/pdfminer-{{ version }}.tar.gz
   sha256: ba187b93056586a14edd5e630cf63ae96b1cc84b611f55dcddbc997316d9f262
 
 build:
-  skip: True  # [py3k]
   number: 1001
-  script: python setup.py install
+  noarch: python
+  script: "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 requirements:
   build:
-    - python
-
+    - python <3
   run:
-    - python
+    - python <3
 
 test:
   imports:
